--- a/eventos_do_dom/index.html
+++ b/eventos_do_dom/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form>
-        <input type="text" id="username" placeholder="insira seu email"/>
+        <input type="text" id="username" placeholder="insira seu Email"/>
         <input type="password" placeholder="insira sua senha"/>
         <button type="submit">enviar</button>
     </form>
