feat: add div and spinner to html

--- a/ex03/index.html
+++ b/ex03/index.html
@@ -90,23 +90,28 @@
           <br />
 
           <input type="submit" id="submit-button" onclick="changeButton()" />
+          <div id="spinner" class="spinner"></div>
         </form>
       </div>
 
-      <table class="table">
-        <caption>
-          Usuários cadastrados
-        </caption>
-        <tr>
-          <th>Nome</th>
-          <th>Cor escolhida</th>
-          <th>Sexo</th>
-          <th>Genero cinematografico</th>
-        </tr>
-        <tbody id="rows">
-          <tr id="table-lines"></tr>
-        </tbody>
-      </table>
+      <div class="break"></div>
+
+      <div class="table">
+        <table>
+          <caption>
+            Usuários cadastrados
+          </caption>
+          <tr>
+            <th>Nome</th>
+            <th>Cor escolhida</th>
+            <th>Sexo</th>
+            <th>Genero cinematografico</th>
+          </tr>
+          <tbody id="rows">
+            <tr id="table-lines"></tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <script src="./script.js"></script>
   </body>
